# fight-tracker

./: Cargo.toml  bacon.toml  schema.sql
.sqlx/: query-233d02733e1b5d2c1bf83fe5d99af11600f8edaed9031cfa8ff4be597ece818f.json  query-327821aa9fa4d09085e7e2548b9c72642c45f5412f9327091cfc3e4a5cffa7e5.json  query-5d789089f6a19803bd6f0479b68f0ee13f5d6a266294b40682e8168e76fb32e9.json  query-a2107e7e17a34c25da5e8455e779af44f9662d08a90e7e31d4c8971bb3d53a4b.json  query-cbc5694be90b313e00ccd6cec8e3d30cda76b4a3c7fac2823c3e9a24098481ab.json  query-d43a9b47248da8813a9a5b6eda296ebe76fac86ee9de9833e6ab2d530960bc9d.json  query-dc60cb18312f44ff9888e0179faa9e2b0131534120f6d17f778ad06178017d7c.json  query-efe5d3b63aa3f0d75d1a26acb607afa9bcdc66af05ea447f25601e850229aa39.json
migrations/: 20240105022010_initial.sql  20240106235547_basic-structure.sql  20240107010412_dates.sql  20240115051134_remove_clicks.sql  20240117120012_unique_characters.sql
src/: error.rs  main.rs  result.rs
src/api/: characters.rs  games.rs  matches.rs  mod.rs
src/db/: characters.rs  games.rs  matches.rs  mod.rs
static/: index.html
templates/: add_character.html  add_character_success.html  add_game.html  add_game_success.html  base.html  character_overview.html  game_overview.html  index.html  match_results.html
