[package]
name = "fighting-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-rocket"] }
askama_rocket = "0.12.0"
rocket = "0.5.0"
shuttle-rocket = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-shared-db = { version = "0.35.2", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["macros", "runtime-tokio", "tls-rustls"] }
thiserror = "1.0.56"
tokio = "1.26.0"
